[project]
name = 'ursh'
dynamic = ['version', 'dependencies']
description = 'A URL shortening microservice'
readme = 'README.md'
license = 'MIT'
authors = [{ name = 'Indico Team', email = 'indico-team@cern.ch' }]
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Flask',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]
requires-python = '~=3.12'

[project.scripts]
ursh = 'ursh.cli.core:cli'

[project.optional-dependencies]
dev = ['pytest', 'ruff']

[project.urls]
Issues = 'https://github.com/indico/ursh/issues'
GitHub = 'https://github.com/indico/ursh'

[build-system]
requires = ['hatchling==1.27.0', 'hatch-requirements-txt==0.4.1']
build-backend = 'hatchling.build'

[tool.hatch]
version = { path = 'ursh/__init__.py' }

[tool.hatch.metadata.hooks.requirements_txt]
files = ['requirements.txt']

[tool.hatch.build]
packages = ['ursh']

[tool.uv]
# uv does not know about dynamic metadata so `pip install -e .` should always reinstall
reinstall-package = ['ursh']
